# solagent-rs

./: .cargo-deny.toml  .clippy.toml  .env.example  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yaml
docs/: README.md  how-to-usage.md
examples/: bot.rs  multsign.rs  rag.rs  staking.rs  tool.rs
examples/birdeye/src/: main.rs
examples/deploy_collection/src/: main.rs
examples/deploy_token/src/: main.rs
examples/jupiter/src/: main.rs
examples/mint_nft/src/: main.rs
examples/solana/: Cargo.toml
examples/solana/src/: main.rs
solagent-adapters/rig/cookie/src/: get_agent_by_name.rs
solagent-adapters/rig/helius/src/: delete_webhook.rs
solagent-adapters/rig/jupiter/src/: stake_with_jup.rs
solagent-adapters/rig/solana/: Cargo.toml
solagent-adapters/rig/solana/src/: close_empty_token_accounts.rs  get_balance.rs  get_balance_other.rs  get_tps.rs  lib.rs  request_faucet_funds.rs  transfer.rs
solagent-adapters/rig/solana/src/close_empty_account/: mod.rs
solagent-adapters/rig/solana/src/get_tps/: mod.rs  tool.rs
solagent-adapters/rig/solayer/src/: lib.rs
solagent-core/: Cargo.toml
solagent-core/src/: config.rs  lib.rs  model.rs  tool.rs
solagent-plugins/birdeye/src/: lib.rs
solagent-plugins/cookie/src/: lib.rs
solagent-plugins/helius/src/: create_webhook.rs  get_assets_by_owner.rs
solagent-plugins/jupiter/src/: stake_with_jup.rs
solagent-plugins/solana/: Cargo.toml
solagent-plugins/solana/src/: close_empty_token_accounts.rs  deploy_collection.rs  deploy_token.rs  get_balance.rs  get_balance_other.rs  get_tps.rs  get_wallet_address.rs  lib.rs  mint_nft.rs
solagent-wallet/solana/: Cargo.toml
solagent-wallet/solana/src/: lib.rs
src/: lib.rs  main.rs
src/agent_controller/: controller.rs
src/llm_integration/: llm_client.rs  mod.rs  prompt.rs
src/memory_system/: long_term.rs  mod.rs  short_term.rs
src/observability/: logging.rs  mod.rs  mointoring.rs
src/planning_reasoning/: llm_planner.rs  mod.rs  rule_engine.rs
src/security_permission/: abac.rs  mod.rs  rbac.rs
src/solana_integration/: indexer.rs  rpc.rs
src/system_tools/: tools.rs
src/system_tools/solagent-adapters/rig/cookie/src/: get_agent_by_ca.rs
src/system_tools/solagent-adapters/rig/gibwork/src/: lib.rs
src/system_tools/solagent-adapters/rig/helius/src/: create_webhook.rs  get_webhook.rs  transaction_parsing.rs
src/system_tools/solagent-core/: Cargo.toml
src/system_tools/solagent-plugins/gibwork/src/: lib.rs
src/system_tools/solagent-plugins/helius/src/: get_webhook.rs
src/system_tools/solagent-plugins/jupiter/src/: trade.rs
src/system_tools/solagent-plugins/pumpfun/src/: lib.rs
src/system_tools/solagent-plugins/solana/: Cargo.toml
src/system_tools/solagent-plugins/solana/src/: lib.rs  request_faucet_funds.rs
src/system_tools/solagent-plugins/solayer/src/: stake_with_solayer.rs
src/user_interface/: api.rs  cli.rs  mod.rs  web.rs
src/workflow_engine/: dag.rs  mod.rs
system_tools/solagent-adapters/rig/birdeye/: README.md
system_tools/solagent-adapters/rig/birdeye/src/: lib.rs
system_tools/solagent-adapters/rig/cookie/src/: search_tweets.rs
system_tools/solagent-adapters/rig/helius/src/: get_assets_by_owner.rs
system_tools/solagent-adapters/rig/jupiter/src/: trade.rs
system_tools/solagent-adapters/rig/pumpfun/src/: lib.rs
system_tools/solagent-adapters/rig/solana/src/: deploy_collection.rs  mint_nft.rs
system_tools/solagent-core/src/: lib.rs
system_tools/solagent-plugins/helius/src/: delete_webhook.rs  transaction_parsing.rs
system_tools/solagent-plugins/solana/src/: transfer.rs
(+6 files in other folders)
