[package]
name = "solagent"
version = "0.1.0"
edition = "2021"

[lib]
name = "solagent"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "2.0"
solana-sdk = "2.0"
clap = { version = "4.0", features = ["derive"] }
actix-web = "4.0"
rusqlite = { version = "0.29", features = ["bundled"] }
redis = "0.25"
tokio = { version = "1.0", features = ["full"] }
petgraph = "0.6"
casbin = "2.0"
tracing = "0.1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }

[package.metadata.docs]
features = ["all"]