[package]
name = "solagent-core"
version = "0.2.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/solagentlabs/solagent-rs"
keywords = ["solagent", "core"]
license = "Apache-2.0"
description = "solagent core"

[dependencies]
anyhow = "1.0"
solana-client = "2.2.7"
# rig-core = "0.11"
rig-core = { path = "../../../rig/rig-core"}
solagent-wallet-solana = { path = "../solagent-wallet/solana" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"