[package]
name = "solagent-plugin-solana"
version = "0.2.0"
edition = "2021"
authors = ["zTgx <beautifularea@gmail.com>"]
repository = "https://github.com/solagentlabs/solagent-rs"
keywords = ["solagent", "plugin", "solana"]
license = "Apache-2.0"
description = "solagent plugin solana"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
solana-account-decoder = "2.1.9"
spl-token-2022 = "6.0.0"
serde_json = "1.0"
mpl-token-metadata = { version = "5.1.0", features = ["serde"] }
solana-sdk = "2.2.2"
solana-client = "2.2.7"
solagent-wallet-solana = { path = "../../solagent-wallet/solana" }

























